--- a/src/common/style/minxin.scss
+++ b/src/common/style/minxin.scss
@@ -1,31 +1,54 @@
-.border-1px{
+.border-1px {
   position: relative;
-  &:after{
+  &:after {
     content: "";
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
-    border-bottom:1px solid rgba(7,17,27,.1);
+    border-bottom: 1px solid rgba(7, 17, 27, .1);
+  }
+}
+
+//下划线
+@mixin border-1px($color) {
+  position: relative;
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-bottom: 1px solid $color;
+  }
+}
+
+//背景图片
+@mixin bg-image($url) {
+  background-image: url($url + "@2x.png");
+  background-size:cover;
+  background-position: center;
+  @media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
+    background-image: url($url + "@3x.png");
   }
 }
 
 //媒体查询
-@media (-webkit-min-device-pixel-ratio:1.5),(min-device-pixel-ratio:1.5) {
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5) {
   .border-1px:after {
     -webkit-transform: scaleY(0.7);
     transform: scaleY(0.7);
   }
 }
 
-@media (-webkit-min-device-pixel-ratio:2),(min-device-pixel-ratio:2) {
+@media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2) {
   .border-1px:after {
     -webkit-transform: scaleY(0.5);
     transform: scaleY(0.5);
   }
 }
 
-@media (-webkit-min-device-pixel-ratio:3),(min-device-pixel-ratio:3) {
+@media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
   .border-1px:after {
     -webkit-transform: scaleY(0.33);
     transform: scaleY(0.33);
