--- a/src/common/style/minxin.scss
+++ b/src/common/style/minxin.scss
@@ -11,6 +11,13 @@
   }
 }
 
+@mixin border-none() {
+  position: relative;
+  &:after {
+    display: none;
+  }
+}
+
 //背景图片
 @mixin bg-image($url) {
   background-image: url($url + "@2x.png");
